--- a/portfolio/src/components/stlyes/Card.module.css
+++ b/portfolio/src/components/stlyes/Card.module.css
@@ -1,8 +1,7 @@
 .container{
-
     width: 270px;
+    min-width: 270px;
     height: 50vh;
-    display: inline-block;
     opacity: 60%;
     border-radius: 20px;
     background: rgba(255, 255, 255, 0.13);
@@ -11,5 +10,10 @@
     backdrop-filter: blur(2.8px);
     -webkit-backdrop-filter: blur(2.8px);
     border: 1px solid rgba(255, 255, 255, 0.72);
-    text-align: center;
+    /* text-align: center; */
+
+    display: flex;
+    flex-direction: column;
+    padding: 0.25rem;
 }
+
