--- a/portfolio/src/components/stlyes/Card.module.css
+++ b/portfolio/src/components/stlyes/Card.module.css
@@ -17,3 +17,53 @@
     padding: 0.25rem;
 }
 
+.name {
+    font-size: 26px;
+    color: black;
+    flex:1;
+    align-self: center;
+    justify-self: center;
+    pointer-events: none;
+}
+
+.image{
+    max-width: 210px;
+    height: auto ;
+    max-height: 30%;
+    margin: 1rem ;
+    border-radius: 13px;
+    align-self: center;
+    flex: 2;
+}
+
+.textBox{
+    flex:4;
+    padding: 0.5rem;
+    margin: 0.5rem;
+    justify-content: center;
+    background: rgba(121, 39, 10, 0.2);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(121, 39, 10, 0.3);
+    border: 30px;
+    pointer-events: none;
+}
+
+.lang{
+    /* From https://css.glass */
+    background: rgba(255, 255, 255, 0.40);
+    border-radius: 13px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(6.6px);
+    -webkit-backdrop-filter: blur(6.6px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    display: flex;
+    justify-content: center;
+}
+
+.svg{
+    width: 20px;
+    margin: 0.2rem;
+}
