--- a/portfolio/src/pages/styles/Home.module.css
+++ b/portfolio/src/pages/styles/Home.module.css
@@ -13,7 +13,6 @@
     position: fixed;
 }
 .container{
-    /* background-color: aliceblue; */
     width: 70%;
     min-width:450px;
     height: 90vh;
@@ -57,7 +56,7 @@
     width: 100%;
     height: 2rem;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 }
 circle{
@@ -66,7 +65,6 @@ circle{
     background-color: brown;
     max-width: 2rem;
     height: 2rem;
-    margin: 4%;
     border-radius: 100%;
 }
 .circle_pane :nth-child(2){
