--- a/src/pages/styles/Project.module.css
+++ b/src/pages/styles/Project.module.css
@@ -1,5 +1,6 @@
 *{
     transition: all 0.5s ease;
+    margin: 0px;
 }
 .root{
     display: flex;
@@ -11,6 +12,7 @@
     height: 100vh;
     margin: 0px;
     position: fixed;
+    
 }
 
 .container{
@@ -50,6 +52,7 @@
     font-size: 1.2rem;
     color: brown;
     opacity: 70%;
+    transition: none;
 }
 
 .circle_pane{
@@ -104,4 +107,57 @@
     display: flex;
     overflow: hidden;
     opacity: 0;
+}
+
+
+.loader{
+    color:black;
+    font-size: 40px;
+}
+
+@keyframes color {
+form {
+color:brown;
+transform: translateX(-15px);
+}
+to {
+color:red;
+transform: translateX(15px);
+}
+
+}
+.loader div{
+animation-name: color;
+animation-duration: 1s;
+animation-iteration-count: infinite;
+animation-direction: alternate;
+animation-timing-function: linear;
+transform: translateX(-20px);}
+
+
+.loader :nth-child(2) {
+
+animation-delay: 0.25s;
+}
+
+.loader :nth-child(3) {
+
+animation-delay: 0.5s;
+}
+.loader :nth-child(4) {
+
+animation-delay: 0.75s;
+}
+.loader :nth-child(4) {
+
+animation-delay: 1s;
+}.loader :nth-child(5) {
+
+animation-delay: 1.25s;
+}.loader :nth-child(6) {
+
+animation-delay: 1.5s;
+}.loader :nth-child(7) {
+
+animation-delay: 1.75s;
 }
